스탠다드반 첫번째 과제 1차 완성(일단 xml 자체에서는 똑같이 구현했으니까.. 저번이랑 달라진 점 티스토리에 정리 꼭 하기!)

--- a/app/src/main/res/drawable/gradient_pink_background.xml
+++ b/app/src/main/res/drawable/gradient_pink_background.xml
@@ -3,4 +3,7 @@
     <gradient
         android:startColor="@color/white"
         android:endColor="@color/pink"/>
+    <size
+        android:width="200dp"
+        android:height="0.2dp"/>
 </shape>
