--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="pink">#F89AEE</color>
-    <color name="light_gray">#31FFFFFF</color>
+    <color name="dark_gray">#80090909</color>
+    <color name="light_gray">#25090909</color>
 </resources>
