--- a/app/src/main/res/drawable/gray_background.xml
+++ b/app/src/main/res/drawable/gray_background.xml
@@ -2,5 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/light_gray"/>
+    <size android:width="100dp"
+        android:height="50dp"/>
     <corners android:radius="20dp"/>
 </shape>
