--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -6,18 +6,6 @@
     android:layout_height="match_parent"
     android:padding="20dp">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:background="@drawable/pink_and_black_stroke"
-        android:text="Sign in"
-        android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -33,7 +21,9 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
+        android:padding="10dp"
+        android:textAlignment="center"
         android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Diam maecenas mi non sed ut odio. Non, justo, sed facilisi et. "
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,12 +35,13 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toStartOf="@+id/imageView2"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6"
-        app:srcCompat="@drawable/ic_google" />
+        app:layout_constraintTop_toBottomOf="@+id/leftPink"
+        app:srcCompat="@drawable/ic_google"
+        tools:layout_editor_absoluteY="479dp" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -78,11 +69,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:ems="10"
-        android:hint="Username , Email & Phone Number"
+        android:background="@drawable/gray_background"
+        android:padding="15dp"
+        android:hint="Username , Email, Phone Number"
         android:inputType="text"
         android:singleLine="false"
-        android:background="@android:color/transparent"
+        android:textColorHint="@color/dark_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -91,10 +83,11 @@
         android:id="@+id/editTextTextPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:background="@android:color/transparent"
-        android:ems="10"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/gray_background"
         android:hint="Password"
+        android:textColorHint="@color/dark_gray"
+        android:padding="15dp"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,39 +99,56 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Forgot Password ?"
+        android:clickable="true"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:background="@drawable/pink_background"
+        android:text="Sign in"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/leftPink"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/leftPink"
+        android:layout_width="130dp"
+        android:layout_height="4dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/gradient_pink_background"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/OrSignUpWith"
+        app:layout_constraintTop_toBottomOf="@+id/button2"
+
+        tools:layout_editor_absoluteY="435dp" />
+
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/OrSignUpWith"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Or Sign up With"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
-        app:layout_constraintTop_toTopOf="@+id/textView8"
-        app:layout_constraintBottom_toBottomOf="@+id/textView8"
-        app:layout_constraintEnd_toStartOf="@+id/textView7"/>
+        app:layout_constraintLeft_toRightOf="@+id/leftPink"
+        app:layout_constraintRight_toLeftOf="@+id/rightPink"
+        app:layout_constraintTop_toBottomOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"/>
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="100dp"
-        android:layout_height="10dp"
-        android:background="@drawable/gradient_pink_background"
-        app:layout_constraintBottom_toBottomOf="@+id/textView6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toTopOf="@+id/textView6"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="100dp"
-        android:layout_height="10dp"
-        android:layout_marginTop="32dp"
-        android:background="@drawable/gradient_pink_background"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/textView6"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/rightPink"
+        android:layout_width="130dp"
+        android:layout_height="4dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/gradient_pink_background2"
+        app:layout_constraintLeft_toRightOf="@+id/OrSignUpWith"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
